Fixed a tiny issue within my CSS file
It was not showing the icons previously and now it does show icons.

--- a/projects/css/basic_style.css
+++ b/projects/css/basic_style.css
@@ -20,7 +20,7 @@ h1 {
    SELECT ALL SQUARES IN THE ARRAY
  ------------------------------------*/
 .container .squares:nth-child(-n+4) {
-    background-image: url ("../projects/icons/smileyface2.png");
+    background-image: url ("../images/icons/smileyface2.png");
     color: #fff;
     float: left;
     width: 100px;
@@ -68,7 +68,7 @@ SELECT ALL SQUARES PARAGRAPHS IN THE ARRAY
 ------------------------------------------------------*/
 
 .container .squares:nth-child(-n+4):hover {
-    background-image: url("../projects/icons/smileyface1.png");
+    background-image: url("../images/icons/smileyface1.png");
 }
 
 .squares:nth-child(1):hover {
@@ -91,7 +91,7 @@ SELECT ALL SQUARES PARAGRAPHS IN THE ARRAY
     HOVER EFFECTS
 -----------------------------------------------*/
 .container .squares:nth-child(-n+4):hover {
-    background-image: url("../projects/icons/smileyface1.png");
+    background-image: url("../images/icons/smileyface1.png");
     transform: scale(.5);
     animation-name: race;
     animation-duration: 2.5s;
@@ -121,7 +121,7 @@ SELECT ALL SQUARES PARAGRAPHS IN THE ARRAY
 @keyframes race {
     0%, 100% {
         transform: translateY(0px);
-        background-image: url("../projects/icons/smileyface1.png");
+        background-image: url("../images/icons/smileyface1.png");
     }
     50% {
         transform: translateY(330px);
